[package]
name = "gre"
version = "0.1.0"
authors = ["Gaëtan Renaudeau <renaudeau.gaetan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.8.0"
image = "0.23"
rand = "0.5.6"
ncollide2d = "0.22"
ncollide3d = "0.22"