[package]
name = "gre"
version = "0.1.0"
authors = ["Gaëtan Renaudeau <renaudeau.gaetan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gre"
path = "src/lib.rs"

[dependencies]
geo = "0.17"
svg = "0.8.0"
image = "0.23"
rand = "0.5.6"
kiss3d = "0.29"
noise = "0.7"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
